test/tests/compiler/1_int_constants/invalid_lex/invalid_identifier_2.plx
# identifiers prefixed with m4_ are reserved for preprocessing
pub fn main(none) i32 {
    return m4_b
}
